--- a/src/Sooda.CodeGen/Sooda.CodeGen.vs2005.csproj
+++ b/src/Sooda.CodeGen/Sooda.CodeGen.vs2005.csproj
@@ -1,12 +1,12 @@
-﻿<?xml version='1.0' encoding='utf-8'?>
-<Project DefaultTargets='Build' xmlns='http://schemas.microsoft.com/developer/msbuild/2003'>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{0D67237B-4FBA-4BD9-95C3-24B5F427D014}</ProjectGuid>
-    <Configuration Condition=' &apos;$(Configuration)&apos; == &apos;&apos; '>Debug</Configuration>
-    <Platform Condition=' &apos;$(Platform)&apos; == &apos;&apos; '>AnyCPU</Platform>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ApplicationIcon>
     </ApplicationIcon>
     <AssemblyKeyContainerName>
@@ -28,7 +28,7 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
   </PropertyGroup>
-  <PropertyGroup Condition=' &apos;$(Configuration)|$(Platform)&apos; == &apos;Debug|AnyCPU&apos; '>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\Debug\</OutputPath>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <BaseAddress>285212672</BaseAddress>
@@ -50,7 +50,7 @@
     <DebugType>full</DebugType>
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
-  <PropertyGroup Condition=' &apos;$(Configuration)|$(Platform)&apos; == &apos;Release|AnyCPU&apos; '>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\Release\</OutputPath>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <BaseAddress>285212672</BaseAddress>
@@ -73,116 +73,118 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include='System'>
+    <Reference Include="System">
       <Name>System</Name>
     </Reference>
-    <Reference Include='System.Data'>
+    <Reference Include="System.Data">
       <Name>System.Data</Name>
     </Reference>
-    <Reference Include='System.Xml'>
+    <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
-    <ProjectReference Include='..\Sooda\Sooda.vs2005.csproj'>
+    <ProjectReference Include="..\Sooda\Sooda.vs2005.csproj">
       <Name>Sooda.vs2005</Name>
       <Project>{FCC9B644-9093-41F6-8F0D-F98F22474CB5}</Project>
       <Package>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</Package>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include='AssemblyInfo.cs'>
+    <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='AssemblySign.cs'>
+    <Compile Include="AssemblySign.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='CDIL\CDILContext.cs'>
+    <Compile Include="CDIL\CDILContext.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='CDIL\CDILParser.cs'>
+    <Compile Include="CDIL\CDILParser.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='CDIL\CDILPrettyPrinter.cs'>
+    <Compile Include="CDIL\CDILPrettyPrinter.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='CDIL\CDILTemplate.cs'>
+    <Compile Include="CDIL\CDILTemplate.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='CDIL\CDILToken.cs'>
+    <Compile Include="CDIL\CDILToken.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='CDIL\CDILTokenizer.cs'>
+    <Compile Include="CDIL\CDILTokenizer.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='CodeDomClassSkeletonGenerator.cs'>
+    <Compile Include="CodeDomClassSkeletonGenerator.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='CodeDomClassStubGenerator.cs'>
+    <Compile Include="CodeDomClassStubGenerator.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='CodeDomHelpers.cs'>
+    <Compile Include="CodeDomHelpers.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='CodeDomListRelationTableGenerator.cs'>
+    <Compile Include="CodeDomListRelationTableGenerator.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='CodeGenerator.cs'>
+    <Compile Include="CodeGenerator.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='EmbedSchema.cs'>
+    <Compile Include="EmbedSchema.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='ExternalProjectInfoCollection.cs'>
+    <Compile Include="ExternalProjectInfoCollection.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='ICodeGeneratorOutput.cs'>
+    <Compile Include="ICodeGeneratorOutput.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='IProjectFile.cs'>
+    <Compile Include="IProjectFile.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='NullProjectFile.cs'>
+    <Compile Include="NullProjectFile.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='SoodaCodeGenException.cs'>
+    <Compile Include="SoodaCodeGenException.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='SoodaProject.cs'>
+    <Compile Include="SoodaProject.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='VS2005csprojProjectFile.cs'>
+    <Compile Include="VS2005csprojProjectFile.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='VS2005ProjectFileBase.cs'>
+    <Compile Include="VS2005ProjectFileBase.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='VS2005vbprojProjectFile.cs'>
+    <Compile Include="VS2005vbprojProjectFile.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='VScsprojProjectFile.cs'>
+    <Compile Include="VScsprojProjectFile.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='VSProjectFileBase.cs'>
+    <Compile Include="VSProjectFileBase.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='VSvbprojProjectFile.cs'>
+    <Compile Include="VSvbprojProjectFile.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include='AssemblyBuildInfo.cs' />
+    <Compile Include="AssemblyBuildInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include='CDIL\Templates\TypedWrapper.cdil' />
-    <EmbeddedResource Include='CDIL\Templates\Loader.cdil' />
-    <EmbeddedResource Include='CDIL\Templates\Skeleton.cdil' />
-    <EmbeddedResource Include='CDIL\Templates\TypedCollectionWrapper.cdil' />
-    <EmbeddedResource Include='CDIL\Templates\DatabaseSchema.cdil' />
-    <EmbeddedResource Include='CDIL\Templates\ClassField.cdil' />
-    <EmbeddedResource Include='SoodaProject.xsd' />
-    <EmbeddedResource Include='CDIL\Templates\Factory.cdil' />
-    <EmbeddedResource Include='CDIL\Templates\NullableTypedWrapper.cdil' />
-    <EmbeddedResource Include='CDIL\Templates\ListWrapper.cdil' />
-    <EmbeddedResource Include='CDIL\Templates\Stub.cdil' />
+    <EmbeddedResource Include="CDIL\Templates\TypedWrapper.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\Loader.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\Skeleton.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\TypedCollectionWrapper.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\DatabaseSchema.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\ClassField.cdil" />
+    <EmbeddedResource Include="SoodaProject.xsd">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CDIL\Templates\Factory.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\NullableTypedWrapper.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\ListWrapper.cdil" />
+    <EmbeddedResource Include="CDIL\Templates\Stub.cdil" />
   </ItemGroup>
-  <Import Project='$(MSBuildBinPath)\Microsoft.CSharp.targets' />
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>"$(ProjectDir)..\..\tools\UpdateBuildNumber.exe" "$(ProjectDir)..\..\Sooda.version" "$(ProjectDir)AssemblyBuildInfo.cs" "$(ProjectDir)..\..\build\Sooda.buildversion"</PreBuildEvent>
     <PostBuildEvent>
