--- a/src/Sooda/Sooda.vs2005.csproj
+++ b/src/Sooda/Sooda.vs2005.csproj
@@ -83,6 +83,7 @@
     <Reference Include="System.Drawing">
       <Name>System.Drawing</Name>
     </Reference>
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
@@ -665,6 +666,7 @@
     <Compile Include="SoodaWhereClause.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Sql\SqlDataSourceDT.cs" />
     <Compile Include="Sql\DbParameterConverter.cs">
       <SubType>Code</SubType>
     </Compile>
