--- a/src/Sooda/Sooda.vs2008.csproj
+++ b/src/Sooda/Sooda.vs2008.csproj
@@ -37,7 +37,7 @@
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
-    <DefineConstants>VSNET,DOTNET2</DefineConstants>
+    <DefineConstants>VSNET,DOTNET2,DOTNET35</DefineConstants>
     <DocumentationFile>
     </DocumentationFile>
     <DebugSymbols>true</DebugSymbols>
